package(default_visibility = ["//src/test:__subpackages__"])

load("//:junit5.bzl", "java_junit5_test")

java_junit5_test(
    name = "unit_tests",
    timeout = "short",
    srcs = glob(["*.java"]),
    jvm_flags = [
        "-Dlog4j.configurationFile=resources/log4j2-test.xml",
    ],
    main_class = "com.flexport.bazeljunit5.BazelJUnit5ConsoleLauncher",
    resources = ["//pipeline/src/resources:log4j2-test.xml"],
    tags = ["exclusive"],
    test_package = "ai.promoted.metrics.logprocessor.common.job",
    use_testrunner = False,
    deps = [
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/avro",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/job",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/job/testing",
        "//pipeline/src/main/java/com/flexport/bazeljunit5",
        "//pipeline/src/main/java/org/apache/flink/formats/protobuf/deserialize:protobuf_to_row",
        "//pipeline/src/main/java/org/apache/flink/formats/protobuf/serialize:row_to_protobuf",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@com_google_protobuf//java/core",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_truth_truth",
        "@maven//:info_picocli_picocli",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_flink_flink_avro",
        "@maven//:org_apache_flink_flink_connector_kafka",
        "@maven//:org_apache_flink_flink_core",
        "@maven//:org_apache_flink_flink_protobuf",
        "@maven//:org_apache_flink_flink_streaming_java",
        "@maven//:org_apache_flink_flink_table_api_java_uber",
        "@maven//:org_mockito_mockito_core",
        "@maven_test//:org_apache_flink_flink_table_runtime",
    ],
)
